Fix image alignment and card height

--- a/src/assets/js/pages/cart/cart.css
+++ b/src/assets/js/pages/cart/cart.css
@@ -14,9 +14,10 @@
 .cart-item {
   display: grid;
   grid-template-columns: 7rem 1fr;
+  align-items: center;
   gap: 20px;
-  width: 51.3125rem;
-  height: 11.9375rem;
+
+  max-width: 51.3125rem;
   flex-shrink: 0;
   border-radius: 1.5rem;
   border: 2px solid #e6e6e6;
@@ -24,10 +25,10 @@
 }
 
 .item-image {
+  justify-self: center;
   width: 9.5rem;
   height: 9.5rem;
   padding: 5px;
-  margin-right: 20px;
   object-fit: contain;
 }
 
